Remove sensitive data from .env file
Cleared sensitive information from environment variables.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-BOT_TOKEN=8432404390:AAGNoIz63xve_en2Fz4hsa2iwI0u1lzwpCk
-ADMIN_ID=7695728173
-ADMIN_PASSWORD=zoirjon1099
+BOT_TOKEN=
+ADMIN_ID=
+ADMIN_PASSWORD=
+
